@@ -5,6 +5,7 @@
 	- Change the default initialization for MS3Record.starttime to NSTUNSET.
 	Previously this was a value of 0, corresponding to 1970-01-01T00:00:00Z.
 	- msr3_print(): do not force high resolution printing of sample rate.
+	- Add MSF_PPUPDATETIME flag to store update time (as nstime_t) at MS3TraceSeg.prvtptr.
 
 2024.165: 3.1.3
 	- Use sequence number from extra headers (/FDSN/Sequence) if present when writing format v2.
